--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_margin="12dp"
+        android:layout_margin="10dp"
         android:text="@string/loginTitle"
         android:textSize="24sp" />
 
@@ -50,9 +49,11 @@
     <Button
         android:id="@+id/signup_btn"
         style="@android:style/Widget.Material.Button.Borderless"
-        android:layout_width="186dp"
+        android:layout_width="290dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_below="@+id/login_btn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="-0dp"
         android:padding="0dp"
         android:text="@string/sign_up_prompt"
         android:textColor="?attr/colorPrimaryDark" />
