--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -39,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/manage_monitoring"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
         android:text="@string/manage_group" />
 
     <Button
