--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -7,62 +7,32 @@
     tools:context=".app.CreateGroup">
 
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/textView9"
-        android:layout_alignTop="@+id/editText"
-        android:text="@string/group_name"
-        android:textSize="14sp"/>
-
-
     <EditText
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/button3"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="61dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="79dp"
         android:ems="10"
         android:hint="@string/enter_group_name"
-        android:inputType="textPersonName"/>
+        android:inputType="textPersonName" />
 
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button2"
-        android:layout_alignStart="@+id/textView10"
-        android:text="@string/starting_location"
-        />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="216dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
         android:text="@string/select_starting_location" />
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/textView7"
-        android:layout_marginBottom="173dp"
-        android:text="@string/destination" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/editText"
-        android:layout_marginTop="134dp"
+        android:layout_centerInParent="true"
         android:text="@string/select_destination" />
 
     <Button
@@ -70,9 +40,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="12dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="42dp"
         android:text="@string/ok" />
 
 
