--- a/app/src/main/res/layout/activity_add_group.xml
+++ b/app/src/main/res/layout/activity_add_group.xml
@@ -6,18 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".app.AddGroup">
 
-    <ListView
-        android:layout_width="385dp"
-        android:layout_height="402dp"
-        android:layout_marginBottom="32dp" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="36dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginEnd="12dp"
         android:text="@string/add_group" />
+
+    <ListView
+        android:id="@+id/group_listview"
+        android:layout_width="match_parent"
+        android:layout_height="444dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
