--- a/app/src/main/res/layout/activity_remove_group.xml
+++ b/app/src/main/res/layout/activity_remove_group.xml
@@ -7,18 +7,20 @@
     android:layout_height="match_parent"
     tools:context=".app.RemoveGroup">
 
-    <ListView
-        android:layout_width="368dp"
-        android:layout_height="394dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp" />
-
     <Button
         android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="35dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="13dp"
         android:text="@string/remove_group" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="444dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="67dp" />
 </RelativeLayout>
