--- a/app/src/main/res/layout/activity_manage_group.xml
+++ b/app/src/main/res/layout/activity_manage_group.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.AddGroup">
+    tools:context=".app.ManageGroups">
 
 
     <Button
@@ -21,6 +20,7 @@
         android:id="@+id/group_listview"
         android:layout_width="match_parent"
         android:layout_height="444dp"
+        android:layout_above="@+id/button4"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
 
