--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -7,7 +7,7 @@
 
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editGroupName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView7"
@@ -19,24 +19,24 @@
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/starting_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/editGroupName"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
         android:text="@string/select_starting_location" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/destination"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/starting_location"
         android:layout_centerHorizontal="true"
         android:text="@string/select_destination" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/ok_create_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
