--- a/app/src/main/res/layout/remove_massage_layout.xml
+++ b/app/src/main/res/layout/remove_massage_layout.xml
@@ -15,4 +15,13 @@
         tools:layout_editor_absoluteX="162dp"
         tools:layout_editor_absoluteY="213dp" />
 
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="214dp"
+        android:layout_height="38dp"
+        android:layout_above="@+id/textView6"
+        android:layout_centerHorizontal="true"
+        android:text="@string/remove_user_txtview"
+        android:textAlignment="center" />
+
 </RelativeLayout>
