--- a/app/src/main/res/layout/activity_manage_monitoring.xml
+++ b/app/src/main/res/layout/activity_manage_monitoring.xml
@@ -62,6 +62,17 @@
         android:orientation="vertical">
 
 
+        <Button
+            android:id="@+id/add_monitored_btn"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="25dp"
+            android:layout_marginEnd="25dp"
+            android:text="@string/add"
+            android:textSize="24sp" />
+
         <ListView
             android:id="@+id/monitored_listview"
             android:layout_width="match_parent"
