--- a/app/src/main/res/layout-land/activity_monitoring_users.xml
+++ b/app/src/main/res/layout-land/activity_monitoring_users.xml
@@ -12,15 +12,16 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/group_id_edittxt"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:text="@string/add_to_group" />
+        android:layout_marginTop="5dp"
+        android:text="@string/add_to_group"
+        tools:layout_editor_absoluteX="74dp"
+        tools:layout_editor_absoluteY="138dp" />
 
     <ListView
         android:id="@+id/monitor_user_groups_list"
         android:layout_width="match_parent"
         android:layout_height="313dp"
         android:layout_below="@+id/add_to_group_btn"
-        android:layout_marginTop="70dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"/>
@@ -31,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="19dp"
         android:ems="10"
         android:hint="@string/group_id"
         android:inputType="textPersonName" />
