Monitoring mostly implemented
The user is able to monitor and be monitored, as well as deleted
monitoring relationships. The only issue is that the monitored by
listview has a NullPointerException. I hope that someone can look at this.

--- a/app/src/main/res/layout/monitoring_layout.xml
+++ b/app/src/main/res/layout/monitoring_layout.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/txtMonitoringName"
         android:layout_width="match_parent"
-        android:layout_height="252dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_height="wrap_content"
         android:text="Name"
         android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
     <TextView
         android:id="@+id/txtMonitoringEmail"
         android:layout_width="match_parent"
-        android:layout_height="259dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="0dp"
-        android:layout_marginEnd="0dp"
+        android:layout_height="wrap_content"
         android:text="E-mail"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:textSize="14sp" />
-</RelativeLayout>
+</LinearLayout>
