--- a/app/src/main/res/layout/activity_manage_monitoring.xml
+++ b/app/src/main/res/layout/activity_manage_monitoring.xml
@@ -63,6 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="255dp"
         android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:orientation="vertical">
 
@@ -81,10 +82,10 @@
             android:id="@+id/monitored_listview"
             android:layout_width="match_parent"
             android:layout_height="203dp"
-            android:layout_below="@+id/monitored_txtview"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
+            android:layout_below="@+id/monitored_txtview"
             android:layout_marginTop="8dp" />
 
         <TextView
