--- a/app/src/main/res/layout/activity_monitoring_users.xml
+++ b/app/src/main/res/layout/activity_monitoring_users.xml
@@ -33,6 +33,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/group_id"
+        android:hint="@string/add_group_name"
         android:inputType="textPersonName" />
 </RelativeLayout>
